[package]
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "Apache-2.0/MIT"
name = "moxie-web"
version = "0.1.0"
edition = "2018"
description = "experimental web runtime for moxie"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
js-sys = "0.3.4"
maplit = "1"
moxie = { path = "../../", version = "0.1" }
wasm-bindgen = "0.2.27"
web-sys = { version = "0.3.4", features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "Node",
    "Text",
    "Window", ]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[features]
default = ["console_error_panic_hook", "wee_alloc"]
