[package]
name = "ensure-published"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "ensure-published"
path = "published.rs"

[dependencies]
cargo_metadata = "0.8.1"
crates_io_api = "0.5"
failure = "0.1"
gumdrop = "0.6"
pathfinding = "1.1.12"
semver = "0.9"
tracing = { version = "0.1", features = [ "log" ] }
tracing-fmt = "0.0.1-alpha.3"
