[package]
name = "topo-macro"
version = "0.10.0-pre"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "procedural macros for the topo crate"
repository = "https://github.com/anp/moxie"

include = ["Cargo.toml", "src/**/*.rs"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
